--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -21,6 +21,10 @@
 			<li class="nav-item"><a class="nav-link" href="resena.xhtml">Reseñas</a></li>
 			<li class="nav-item"><a class="nav-link"
 				href="listaResenas.xhtml">Lista de Reseñas</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="clasificacion.xhtml">clasificacion</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="listClasificacion.xhtml">ListaClasificacion</a></li>
 
 		</ul>
 	</div>
