ID NO OBLIGATORIO
ID NO OBLIGATORIO

--- a/src/main/webapp/clasificacion.xhtml
+++ b/src/main/webapp/clasificacion.xhtml
@@ -14,7 +14,7 @@
 			<h:outputLabel value="Id" for="id" styleClass="control-label" />
 			<p:inputText id="id" styleClass="form-control"
 				value="#{clasificacionController.c.tipoClasificacion}"
-				required="true" />
+				required="false" />
 				
 			<h:outputLabel value="Clasificación" for="Clasificación"
 				styleClass="control-label" />
