--- a/src/main/webapp/clasificacion.xhtml
+++ b/src/main/webapp/clasificacion.xhtml
@@ -13,13 +13,13 @@
 
 			<h:outputLabel value="Id" for="id" styleClass="control-label" />
 			<p:inputText id="id" styleClass="form-control"
-				value="#{clasificacionController.c.tipoClasificacion}"
-				required="true" />
-				
+				value="#{clasificacionController.c.tipoClasificacion}" />
+
 			<h:outputLabel value="Clasificación" for="Clasificación"
 				styleClass="control-label" />
 			<p:inputText id="Clasificación" styleClass="form-control"
-				value="#{clasificacionController.c.tipoClasificacion}" required="true" />
+				value="#{clasificacionController.c.tipoClasificacion}"
+				required="true" />
 
 			<h:outputLabel value="Apto Para:" for="apto"
 				styleClass="control-label" />
