--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -25,6 +25,10 @@
 				href="clasificacion.xhtml">clasificacion</a></li>
 			<li class="nav-item"><a class="nav-link"
 				href="listClasificacion.xhtml">ListaClasificacion</a></li>
+				<li class="nav-item"><a class="nav-link"
+				href="rol.xhtml">Rol</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="listRol.xhtml">ListaRol</a></li>
 
 		</ul>
 	</div>
