--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -23,6 +23,12 @@
 			<li class="nav-item"><a class="nav-link"
 				href="listClasificacion.xhtml">Clasificación</a></li>
 
+			<li class="nav-item"><a class="nav-link"
+				href="Categorias.xhtml">Categorias</a></li>
+				
+			<li class="nav-item"><a class="nav-link"
+				href="listaCategorias.xhtml">Lista de Categoria</a></li>
+
 
 		</ul>
 	</div>
