--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -22,12 +22,12 @@
 				href="listaResenas.xhtml">Reseñas</a></li>
 			<li class="nav-item"><a class="nav-link"
 				href="listClasificacion.xhtml">Clasificación</a></li>
-
-			<li class="nav-item"><a class="nav-link"
-				href="Categorias.xhtml">Categorias</a></li>
 				
 			<li class="nav-item"><a class="nav-link"
 				href="listaCategorias.xhtml">Lista de Categoria</a></li>
+
+			<li class="nav-item"><a class="nav-link"
+				href="listRol.xhtml">Rol</a></li>
 
 		</ul>
 	</div>
