--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -24,7 +24,7 @@
 				href="listClasificacion.xhtml">Clasificación</a></li>
 				
 			<li class="nav-item"><a class="nav-link"
-				href="listaCategorias.xhtml">Lista de Categoria</a></li>
+				href="listaCategorias.xhtml">Categoria</a></li>
 
 			<li class="nav-item"><a class="nav-link"
 				href="listRol.xhtml">Rol</a></li>
