--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -22,13 +22,14 @@
 				href="listaResenas.xhtml">Reseñas</a></li>
 			<li class="nav-item"><a class="nav-link"
 				href="listClasificacion.xhtml">Clasificación</a></li>
-				
+
 			<li class="nav-item"><a class="nav-link"
 				href="listaCategorias.xhtml">Categoria</a></li>
 
-			<li class="nav-item"><a class="nav-link"
-				href="listRol.xhtml">Rol</a></li>
+			<li class="nav-item"><a class="nav-link" href="listRol.xhtml">Rol</a></li>
 
+			<li class="nav-item"><a class="nav-link"
+				href="listPopularidad.xhtml">Popularidad</a></li>
 		</ul>
 	</div>
 	</nav>
