--- a/src/main/webapp/listPopularidad.xhtml
+++ b/src/main/webapp/listPopularidad.xhtml
@@ -11,6 +11,14 @@
 
 		<h2>Lista de Popularidad</h2>
 		<h:form>
+
+
+			<div class="form-group">
+				<p:commandButton value="Nuevo"
+					action="#{popularidadController.newPopularidad()}"
+					styleClass="btn btn-primary" ajax="false" />
+			</div>
+			
 			<p:dataTable id="lstpopularidad" var="pop"
 				value="#{PopularidadController.listaPersonas}" paginator="true"
 				paginatorPosition="top" rowsPerPageTemplate="5,10,15,20,25" rows="5"
@@ -24,7 +32,7 @@
 				<p:column headerText="Tipo Popularidad">
 					<h:outputText value="#{pop.tipoPopularidad}" />
 				</p:column>
-				
+
 				<p:column headerText="Operación">
 					<h:commandLink action="listPopularidad"
 						actionListener="#{PopularidadController.delete(pop)}">
