--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -30,6 +30,9 @@
 
 			<li class="nav-item"><a class="nav-link"
 				href="listPopularidad.xhtml">Popularidad</a></li>
+
+			<li class="nav-item"><a class="nav-link"
+				href="listaUsuarios.xhtml">Usuario</a></li>
 		</ul>
 	</div>
 	</nav>
