Detalle notificacion 2.0 con usuario
detalle notificacion con usuario

--- a/src/main/webapp/detallenotificacion.xhtml
+++ b/src/main/webapp/detallenotificacion.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="master.xhtml">
 	<ui:define name="content">
@@ -24,7 +25,7 @@
 
 			<h:outputLabel value="Juego " for="cboJuego"
 				styleClass="control-label" />
-
+	
 			<p:selectOneMenu id="cboJuego"
 				value="#{detallenotificacionController.dn.juego}"
 				converter="omnifaces.SelectItemsConverter">
@@ -36,15 +37,16 @@
 
 			<h:outputLabel value="Usuario" for="cboUsuario"
 				styleClass="control-label" />
-
-			<p:selectOneMenu id="cboUsuario"
-				value="#{detallenotificacionController.dn.usuario}"
-				converter="omnifaces.SelectItemsConverter">
-				<f:selectItems
-					value="#{detallenotificacionController.listUsuarios()}" var="u"
-					itemLabel="#{u.nombre}" itemValue="#{n}" />
+			
+			<p:selectOneMenu id= "cboUsuario"
+				valu = "#{detallenotificacionController.dn.usuario}"
+				converter="onmifaces.SelectItemsConverter">
+				<f:selectItems 
+					value = "#{detallenotificacionController.listUsuarios()}" var="u"
+					itemLabel="#{u.nombre}" itemValue ="#{u}" />
+			
 			</p:selectOneMenu>
-
+			
 			<br />
 
 			<h:outputLabel value="Fecha de publicacion" for="fecha"
