--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -33,6 +33,8 @@
 
 			<li class="nav-item"><a class="nav-link"
 				href="listaUsuarios.xhtml">Usuario</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="listaDetalleResenas.xhtml">Detalle Reseña</a></li>
 		</ul>
 	</div>
 	</nav>
