Correccion Tabla Detalle Notificacion y Implementacion Detalle Galeria
Falta completar con juego y galeria

--- a/src/main/webapp/detallenotificacion.xhtml
+++ b/src/main/webapp/detallenotificacion.xhtml
@@ -3,50 +3,58 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="master.xhtml">
 	<ui:define name="content">
 		<h2>Registro de detalle de Notificacion</h2>
 		<h:form>
-
-			<h:outputLabel value="Mensaje de Notificacion" for="cboNotificacion"
+		
+			<h:outputLabel value="Código de detalle de notificacion" for="id"
+				styleClass="control-label" />
+			<p:inputText id="id"
+				value="#{detallenotificacionController.dn.id}"
+				styleClass="form-control" required="true" />
+				
+			<br />
+			
+			<h:outputLabel value="Notificacion" for="cboNotificacion"
 				styleClass="control-label" />
 
 			<p:selectOneMenu id="cboNotificacion"
 				value="#{detallenotificacionController.dn.notificacion}"
 				converter="omnifaces.SelectItemsConverter">
 				<f:selectItems
-					value="#{detallenotificacionController.listNotificaciones()}"
-					var="n" itemLabel="#{n.mensaje}" itemValue="#{n}" />
+					value="#{detallenotificacionController.listaNotificaciones}"
+					var="n" itemLabel="#{n.idNotificacion}" itemValue="#{n}" />
 			</p:selectOneMenu>
 
 			<br />
 
-			<h:outputLabel value="Juego " for="cboJuego"
+			<!--<h:outputLabel value="Juego " for="cboJuego"
 				styleClass="control-label" />
-	
+
 			<p:selectOneMenu id="cboJuego"
 				value="#{detallenotificacionController.dn.juego}"
 				converter="omnifaces.SelectItemsConverter">
-				<f:selectItems value="#{detallenotificacionController.listJuegos()}"
-					var="j" itemLabel="#{j.nombreJuego}" itemValue="#{j}" />
+				<f:selectItems value="#{detallenotificacionController.listaJuegos}" var="j"
+					itemLabel="#{j.nombreJuego}" itemValue="#{j}" />
 			</p:selectOneMenu>
 
-			<br />
+			<br />-->
 
 			<h:outputLabel value="Usuario" for="cboUsuario"
 				styleClass="control-label" />
-			
-			<p:selectOneMenu id= "cboUsuario"
-				valu = "#{detallenotificacionController.dn.usuario}"
+
+			<p:selectOneMenu id="cboUsuario"
+				valu="#{detallenotificacionController.dn.usuario}"
 				converter="onmifaces.SelectItemsConverter">
-				<f:selectItems 
-					value = "#{detallenotificacionController.listUsuarios()}" var="u"
-					itemLabel="#{u.nombre}" itemValue ="#{u}" />
-			
+				<f:selectItems
+					value="#{detallenotificacionController.listaUsuarios}" var="u"
+					itemLabel="#{u.nombre}" itemValue="#{u}" />
+
 			</p:selectOneMenu>
-			
+
 			<br />
 
 			<h:outputLabel value="Fecha de publicacion" for="fecha"
@@ -63,6 +71,8 @@
 				action="detallenotificacion?faces-redirect=true" update="@form"
 				styleClass="btn btn-primary" />
 		</h:form>
+	</ui:define>
+	<ui:define name="footerCont">
 	</ui:define>
 </ui:composition>
 </html>
