--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -35,6 +35,11 @@
 				href="listaUsuarios.xhtml">Usuario</a></li>
 			<li class="nav-item"><a class="nav-link"
 				href="listaDetalleResenas.xhtml">Detalle Reseña</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="listaDetallenotificaciones.xhtml">Detalle de
+					Notificaciones</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="listaDetalleGalerias.xhtml">Detalle de Galerias</a></li>
 		</ul>
 	</div>
 	</nav>
