Correccion Transaccilo.xhtml

--- a/src/main/webapp/transaccion.xhtml
+++ b/src/main/webapp/transaccion.xhtml
@@ -27,8 +27,7 @@
 					itemLabel="#{j.idJuego}" itemValue="#{j}" />
 			</p:selectOneMenu>
 			<br />
-			<h:outputLabel value="Usuario for="
-				cboUsuario"
+			<h:outputLabel value="Usuario" for="cboUsuario"
 				styleClass="control-label" />
 			<p:selectOneMenu id="cboUsuario"
 				value="#{transaccionController.tra.usuario}"
