--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -24,6 +24,9 @@
 				href="listClasificacion.xhtml">Clasificación</a></li>
 
 			<li class="nav-item"><a class="nav-link"
+				href="listCalificacion.xhtml">Calificacion</a></li>
+
+			<li class="nav-item"><a class="nav-link"
 				href="listaCategorias.xhtml">Categoria</a></li>
 
 			<li class="nav-item"><a class="nav-link" href="listRol.xhtml">Rol</a></li>
