--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -28,6 +28,9 @@
 
 			<li class="nav-item"><a class="nav-link"
 				href="listPopularidad.xhtml">Popularidad</a></li>
+				
+				<li class="nav-item"><a class="nav-link"
+				href="listjuego.xhtml">Juego</a></li>
 
 			<li class="nav-item"><a class="nav-link"
 				href="listaUsuarios.xhtml">Usuario</a></li>
