--- a/src/main/webapp/juego.xhtml
+++ b/src/main/webapp/juego.xhtml
@@ -79,7 +79,7 @@
 
 
 			<p:commandButton value="Grabar"
-				actionListener="#{calificacionController.insert()}"
+				actionListener="#{juegoController.insert()}"
 				action="listjuego?faces-redirect=true" update="@form" />
 
 		</h:form>
