--- a/src/main/webapp/listaDetalleResenas.xhtml
+++ b/src/main/webapp/listaDetalleResenas.xhtml
@@ -38,8 +38,8 @@
 					<h:outputText value="#{dr.usuario.usuario}" />
 				</p:column>
 
-				<p:column headerText="Juego">
-					<h:outputText value="#{dr.juego}" />
+				<p:column headerText="Juego" sortBy="#{dr.juego.nombreJuego}">
+					<h:outputText value="#{dr.juego.nombreJuego}" />
 				</p:column>
 
 
