agregado de juego a detalle notifciacon y detalle galeria
agregar lo que faltaba de juego en detalle noficaicon y detalle galeria, AUN FALTA LA GALERIA

--- a/src/main/webapp/detalleGaleria.xhtml
+++ b/src/main/webapp/detalleGaleria.xhtml
@@ -17,7 +17,19 @@
 
 			<br />
 
-	
+			
+			<h:outputLabel value="Juego " for="cboJuego"
+				styleClass="control-label" />
+
+			<p:selectOneMenu id="cboJuego"
+				value="#{detalleGaleriaController.dg.juego}"
+				converter="omnifaces.SelectItemsConverter">
+				<f:selectItems value="#{detalleGaleriaController.listaJuegos}" var="j"
+					itemLabel="#{j.nombreJuego}" itemValue="#{j}" />
+			</p:selectOneMenu>
+
+			<br />
+			
 
 			<h:outputLabel value="Usuario" for="cboUsuario"
 				styleClass="control-label" />
@@ -30,7 +42,7 @@
 
 			</p:selectOneMenu>
 			
-		
+			
 			
 			<br />
 
