--- a/src/main/webapp/detallenotificacion.xhtml
+++ b/src/main/webapp/detallenotificacion.xhtml
@@ -32,7 +32,19 @@
 			
 			<br />
 
-		
+			<h:outputLabel value="Juego " for="cboJuego"
+				styleClass="control-label" />
+
+			<p:selectOneMenu id="cboJuego"
+				value="#{detallenotificacionController.dn.juego}"
+				converter="omnifaces.SelectItemsConverter">
+				<f:selectItems value="#{detallenotificacionController.listaJuegos}" var="j"
+					itemLabel="#{j.nombreJuego}" itemValue="#{j}" />
+			</p:selectOneMenu>
+
+			<br />
+			
+			
 
 			<h:outputLabel value="Usuario" for="cboUsuario"
 				styleClass="control-label" />
