--- a/src/main/webapp/listaDetallenotificaciones.xhtml
+++ b/src/main/webapp/listaDetallenotificaciones.xhtml
@@ -34,9 +34,9 @@
 					<h:outputText value="#{dn.usuario.nombre}" />
 				</p:column>
 
-				<!--<p:column headerText="Juego" sortBy="#{dn.juego.juego}">
-					<h:outputText value="#{dn.juego.juego}" />
-				</p:column>-->
+				<p:column headerText="Juego" sortBy="#{dn.juego.nombreJuego}">
+					<h:outputText value="#{dn.juego.nombreJuego}" />
+				</p:column>
 
 				<p:column headerText="Fecha de Publicación">
 					<h:outputText value="#{dn.fechapublicacion}">
