errores en ñ y agregar boton notificacion

--- a/src/main/webapp/juego.xhtml
+++ b/src/main/webapp/juego.xhtml
@@ -71,7 +71,7 @@
 			<h:outputLabel value="Tamaño de Juego" for="TamanoJuego"
 				styleClass="control-label" />
 			<p:inputText id="TamanoJuego" styleClass="form-control"
-				value="#{juegoController.j.tamanoJuego}" required="true" />
+				value="#{juegoController.j.tamañoJuego}" required="true" />
 			<h:outputLabel value="Precio de Juego" for="PrecioJuego"
 				styleClass="control-label" />
 			<p:inputText id="PrecioJuego" styleClass="form-control"
