--- a/src/main/webapp/listjuego.xhtml
+++ b/src/main/webapp/listjuego.xhtml
@@ -25,7 +25,7 @@
 
 
 				<p:column headerText="Id">
-					<h:outputText value="#{j.idJuego}" />
+					<h:outputText value="#{j.idjuego}" />
 				</p:column>
 
 				<p:column headerText="Categoria">
@@ -51,7 +51,7 @@
 					<h:outputText value="#{j.fechaLanzamiento}" />
 				</p:column>
 				<p:column headerText="Tamaño de Juego">
-					<h:outputText value="#{j.tamanoJuego}" />
+					<h:outputText value="#{j.}" />
 				</p:column>
 				<p:column headerText="Precio de Juego">
 					<h:outputText value="#{j.precioJuego}" />
