--- a/src/main/webapp/detalleResena.xhtml
+++ b/src/main/webapp/detalleResena.xhtml
@@ -49,7 +49,7 @@
 				styleClass="control-label" />
 			<p:calendar id="fechapub" pattern="dd/MM/yyyy"
 				value="#{detalleResenaController.dr.fechaPublicacion}"
-				showOn="button" timeZone="America/Mexico_City"></p:calendar>
+				showOn="button" timeZone="America/Mexico_City" required="true"></p:calendar>
 			<br />
 
 
