--- a/src/main/webapp/master.xhtml
+++ b/src/main/webapp/master.xhtml
@@ -28,9 +28,8 @@
 
 			<li class="nav-item"><a class="nav-link"
 				href="listPopularidad.xhtml">Popularidad</a></li>
-				
-				<li class="nav-item"><a class="nav-link"
-				href="listjuego.xhtml">Juego</a></li>
+
+			<li class="nav-item"><a class="nav-link" href="listjuego.xhtml">Juego</a></li>
 
 			<li class="nav-item"><a class="nav-link"
 				href="listaUsuarios.xhtml">Usuario</a></li>
@@ -41,6 +40,10 @@
 					Notificaciones</a></li>
 			<li class="nav-item"><a class="nav-link"
 				href="listaDetalleGalerias.xhtml">Detalle de Galerias</a></li>
+
+			<li class="nav-item"><a class="nav-link"
+				href="listTransaccion.xhtml">Transaccion</a></li>
+
 		</ul>
 	</div>
 	</nav>
