--- a/src/main/webapp/listjuego.xhtml
+++ b/src/main/webapp/listjuego.xhtml
@@ -62,8 +62,8 @@
 					Eliminar
 					</h:commandLink>
 				</p:column>
-				<p:column headerText="Modificar">
-					<h:commandLink action="#{juegoController.update(j)}"
+				<p:column headerText="Operación">
+					<h:commandLink action="#{juegoController.updatePre(j)}"
 						value="Modificar">
 					</h:commandLink>
 				</p:column>
