--- a/src/main/webapp/juego.xhtml
+++ b/src/main/webapp/juego.xhtml
@@ -78,7 +78,7 @@
 				value="#{juegoController.j.precioJuego}" required="true" />
 
 
-			<p:commandButton value="Grabar"
+			<p:commandButton value="Publicar"
 				actionListener="#{juegoController.insert()}"
 				action="listjuego?faces-redirect=true" update="@form" />
 
